// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonGroup: should combine className when passed in 1`] = `
<div
  className="combineMe group"
>
  <Button
    className=""
    color="blue"
    component="button"
    fullWidth={false}
    ghost={false}
    loading={false}
  >
    <h5>
      SEEK
    </h5>
  </Button>
</div>
`;

exports[`ButtonGroup: should render a button group with node 1`] = `
<div
  className="group"
>
  <Button
    className=""
    color="blue"
    component="button"
    fullWidth={false}
    ghost={false}
    loading={false}
  >
    <h5>
      SEEK
    </h5>
  </Button>
</div>
`;
